# tablog-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: constants.py  server.py  utils.py
